# Parsec-Free-Virtual-Display-Plugin-MacOS

./: .gitignore  Cargo.toml  LICENSE  PVDisplayPlugin.toml  README.md  README_RU.md  build.rs  build.sh
assets/: style.css
src/: app.rs  autostart.rs  commands.rs  dioxus_config.rs  display.rs  main.rs  parsec.rs  settings.rs  tray.rs
