[package]
name = "macos-parsec-free-vdisplay"
version = "0.4.3-beta"
edition = "2024"
description = "Virtual display manager for Parsec on macOS"
authors = ["vdgmstd"]
license = "MIT"

# ============================================
# App Configuration (custom metadata)
# ============================================

[package.metadata.app]
display_name = "Parsec Virtual Display Plugin"
out_dir = "releases"
asset_dir = "assets"

[package.metadata.desktop]
width = 450
height = 570
min_width = 450
min_height = 570
resizable = false

[package.metadata.bundle]
identifier = "com.vdgmstd.parsec-vdisplay"
publisher = "vdgmstd"
icon = "assets/icon.png"
category = "Utility"
short_description = "Virtual display manager for Parsec"
long_description = "Automatically creates and destroys virtual displays when Parsec clients connect/disconnect"
minimum_system_version = "11.0"

[dependencies]
# Dioxus - UI framework
dioxus = { version = "0.7.4", features = ["desktop"] }

# System tray (temporarily disabled - conflicts with Dioxus)
# tray-icon = "0.19"
# muda = "0.15"

# File watching (for Parsec logs)
notify = "8.2"
notify-debouncer-mini = "0.7.0"

# Async runtime
tokio = { version = "1.51.0", features = ["full"] }

# Serialization (settings)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
core-graphics = "0.25.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Utilities
dirs = "6.0"
anyhow = "1.0"
toml = "1.1.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
